AC_INIT
AC_CONFIG_SRCDIR([Makefile.in])

AC_CONFIG_AUX_DIR(./config)
AC_CONFIG_HEADER(config.h)

AC_CANONICAL_HOST

## Check for programs.

### Need better way to test for GNU make.
###AC_CHECK_PROG(GMAKE, gmake, gmake, no)
###if test $GMAKE != gmake; then
###   AC_MSG_ERROR(This program currently _requires_ gmake)
###fi

AC_PROG_CC
if test $ac_cv_c_compiler_gnu != yes; then
   AC_MSG_ERROR(This program currently _requires_ gcc)
fi

AC_PROG_CPP
AC_PROG_CXX

## Check for libraries.

AC_CHECK_LIB(socket, socket)
#AC_CHECK_LIB(socket, socket,,, -lnsl)
# Don't really want to look for main here...find something better.
AC_CHECK_LIB(nsl, main)

## Check for header files.

AC_CHECK_HEADERS(linux/types.h linux/filter.h,,,
[[#if HAVE_LINUX_TYPES_H
# include <linux/types.h>
#endif
]])

## Check for typedefs.

AC_CHECK_TYPE(u_int32_t,,__u32)

## Check for structures.
## Check for compiler characteristics.
## Check for library functions.
## Check for system services.

this_os=`echo $host_os | sed 's/[[.0-9]]*//g'`
echo Building for $this_os
AC_SUBST(this_os)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
